--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,10 @@ jobs:
             platform: "i686"
           - policy: "manylinux_2_24"
             platform: "x86_64"
+          - policy: "musllinux_1_1"
+            platform: "x86_64"
+          - policy: "musllinux_1_1"
+            platform: "i686"
 
     env:
       POLICY: ${{ matrix.policy }}
